--- a/style.css
+++ b/style.css
@@ -64,10 +64,11 @@ button {
     grid-template-rows: repeat(3,auto);
     color:#eceff4;
     background-image: url("assets/bg.jpg");
+    background-size: cover;
 }
 
 #welcometext {
-    grid-row: 2/3;
+    grid-row: 1/3;
     grid-column: 2/3;
     justify-self: center;
     text-align: center;
